--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -41,3 +41,31 @@
     opacity: 1;
   }
 }
+
+@keyframes show-names {
+  0%,
+  40% {
+    transform: translateY(0);
+  }
+  41%,
+  80% {
+    transform: translateY(-1.5rem);
+  }
+  81%,
+  100% {
+    transform: translateY(-3rem);
+  }
+}
+
+@keyframes show-nav {
+  from {
+    opacity: 0;
+    filter: blur(100%);
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+  }
+}
