--- a/styles/keyframes.css
+++ b/styles/keyframes.css
@@ -12,10 +12,12 @@
 @keyframes show-p {
   from {
     transform: translateY(-10px);
+    filter: blur(1rem);
     opacity: 0;
   }
   to {
     transform: translateY(0);
+    filter: blur(0);
     opacity: 1;
   }
 }
@@ -34,7 +36,7 @@
 @keyframes show-social {
   from {
     opacity: 0;
-    filter: blur(100%);
+    filter: blur(1rem);
   }
   to {
     filter: blur(0%);
@@ -60,7 +62,7 @@
 @keyframes show-nav {
   from {
     opacity: 0;
-    filter: blur(100%);
+    filter: blur(1rem);
     transform: translateX(50px);
   }
   to {
@@ -73,7 +75,7 @@
 @keyframes show-tech {
   from {
     opacity: 0;
-    filter: blur(100%);
+    filter: blur(1rem);
     transform: translateX(-100px);
   }
   to {
@@ -82,20 +84,6 @@
     transform: translateX(0);
   }
 }
-
-@keyframes hidden-home {
-  from {
-    opacity: 1;
-    filter: blur(0);
-    transform: translateX(0);
-  }
-  to {
-    opacity: 0;
-    filter: blur(100);
-    transform: translateX(-100px);
-  }
-}
-
 
 @keyframes spin {
   from{
@@ -104,4 +92,18 @@
   to {
     --angle: 360deg;
   }
+}
+
+@keyframes show-projects {
+  from {
+    opacity: 0;
+    translate: 100px 0;
+    filter: blur(1rem);
+  }
+  to {
+    opacity: 1;
+    translate: 0;
+    filter: blur(0);
+  }
+  
 }
