Adicionando aba de resumo e links

--- a/styles/utility.css
+++ b/styles/utility.css
@@ -99,3 +99,19 @@ fieldset {
 fieldset:not(:last-of-type) {
   border-bottom: 1px solid #3b3b3b69;
 }
+
+.desktop-only {
+  display: none;
+}
+
+@media (width <= 40rem){
+  nav{
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  fieldset{
+    width: 100%;
+  }
+}
