--- a/styles/sections.css
+++ b/styles/sections.css
@@ -9,20 +9,18 @@ section.home {
   .container-home {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-  }
-
-  aside {
-    display: flex;
-    flex-direction: column;
 
     h1 {
       opacity: 0;
       font-size: 3.5rem;
       animation: show-home 2s ease forwards;
     }
-
-    legend {
+    .tech-wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+    .tech-inner-1 {
       opacity: 0;
       font-size: 1.25rem;
       margin-top: 0.875rem;
@@ -47,11 +45,66 @@ section.home {
         }
       }
     }
+    .tech-inner-2 {
+      margin-top: 0.875rem;
+      display: none;
+      gap: 1rem;
+
+      svg {
+        opacity: 1;
+        color: rgb(129, 129, 129);
+        transition: 0.2s ease;
+      }
+
+      a {
+        opacity: 0;
+      }
+
+      a:nth-child(1) {
+        animation: show-social 0.5s 2.5s ease forwards;
+      }
+      a:nth-child(2) {
+        animation: show-social 0.5s 2.6s ease forwards;
+      }
+
+      svg:hover {
+        opacity: 1;
+        color: #16b4f8;
+      }
+    }
+    .tech-inner-3 {
+      margin-top: 0.875rem;
+      display: flex;
+      gap: 1rem;
+
+      svg {
+        opacity: 1;
+        color: rgb(129, 129, 129);
+        transition: 0.2s ease;
+      }
+
+      a {
+        opacity: 0;
+      }
+
+      a:nth-child(1) {
+        animation: show-social 0.5s 2.5s ease forwards;
+      }
+      a:nth-child(2) {
+        animation: show-social 0.5s 2.6s ease forwards;
+      }
+
+      svg:hover {
+        opacity: 1;
+        color: #16b4f8;
+      }
+    }
   }
 
   ul {
     list-style: none;
     display: flex;
+    margin-top: 0.75rem;
     gap: 2rem;
 
     a {
@@ -103,33 +156,6 @@ section.home {
     }
     li:nth-child(6) {
       animation: reveal-ul 1s 2s ease-in-out forwards;
-    }
-  }
-
-  main {
-    display: flex;
-    gap: 1rem;
-
-    svg {
-      opacity: 1;
-      color: rgb(129, 129, 129);
-      transition: 0.2s ease;
-    }
-
-    a {
-      opacity: 0;
-    }
-
-    a:nth-child(1) {
-      animation: show-social 0.5s 2.5s ease forwards;
-    }
-    a:nth-child(2) {
-      animation: show-social 0.5s 2.6s ease forwards;
-    }
-
-    svg:hover {
-      opacity: 1;
-      color: #16b4f8;
     }
   }
 }
@@ -428,9 +454,56 @@ section.links {
 }
 
 @media (max-width: 40rem) {
-  section.home {
+  section {
     width: 100%;
+    overflow-x: hidden;
+  }
+  section.home {
+    font-size: 1rem;
     margin: 0;
+    .container-home {
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      gap: 0.125rem;
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      .tech-wrapper {
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-inline: 1.5rem;
+      }
+      .tech-inner-2 {
+        display: flex;
+        a:nth-child(1) {
+          animation: show-social 0.5s 1.5s ease forwards;
+        }
+        a:nth-child(2) {
+          animation: show-social 0.5s 1.6s ease forwards;
+        }
+      }
+      .tech-inner-3 {
+        display: none;
+      }
+    }
+
+    .mobile-only {
+      display: flex;
+    }
+
+    ul {
+      display: none;
+    }
+
+    aside {
+      h1 {
+        font-size: 2.2rem;
+      }
+    }
   }
   section.about {
     width: 100%;
@@ -450,11 +523,9 @@ section.links {
       border: 1px solid red;
     }
 
-    .container-projects {
-      .project-wrapper {
-        border: 1px solid;
-        grid-template-columns: 1fr;
-      }
+    .container-projects .project-wrapper {
+      border: 1px solid;
+      grid-template-columns: 1fr;
     }
   }
 }
