--- a/styles/utility.css
+++ b/styles/utility.css
@@ -100,18 +100,72 @@ fieldset:not(:last-of-type) {
   border-bottom: 1px solid #3b3b3b69;
 }
 
-.desktop-only {
+.mobile-only {
   display: none;
 }
 
-@media (width <= 40rem){
-  nav{
+.select-section {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  padding: 1rem;
+  width: 7rem;
+  height: 15rem;
+  top: 32px;
+  right: 32px;
+  gap: 0.75rem;
+  padding: 0.75rem;
+  justify-content: end;
+  text-align: end;
+  z-index: 2;
+  background: #16b4f8;
+  clip-path: circle(9% at 84% 12%);
+  transition: 0.4s ease;
+
+  .menu-hamburguer {
+    width: 1.5rem;
+    height: 1rem;
+    position: relative;
+    cursor: pointer;
+    left: 80%;
+    bottom: 5%;
+
+    & span {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 0.125rem;
+      background-color: white;
+      transition: 0.2s ease;
+    }
+
+    span:nth-child(1) {
+      top: 0;
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+    span:nth-child(2) {
+      top: 50%;
+      transform: translateY(-50%);
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+    span:nth-child(3) {
+      bottom: 0;
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+  }
+
+  &:hover {
+    clip-path: circle(150% at 84% 12%);
+  }
+}
+@media (width <= 40rem) {
+  nav {
     width: 100%;
     margin: 0;
     padding: 0;
   }
 
-  fieldset{
+  fieldset {
     width: 100%;
   }
 }
